--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.2.1",
     "@google/genai": "^1.32.0",
     "react-dom": "^19.2.1",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "react-markdown": "9.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
